# da14531-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.h  bindings_no_ble.h  build.rs
config/: da1458x_config_advanced.h  da1458x_config_basic.h  user_config.h  user_profiles_config.h
include/: da1458x_config_advanced.h  da1458x_config_basic.h  user_callback_config.h  user_custs_config.h  user_periph_setup.h
src/: allocator.rs  app.rs  app_modules.rs  ble_stack.rs  core_modules.rs  lib.rs  platform.rs  stdlib.rs
src/app_modules/: app.rs  app_custs.rs  app_diss.rs  app_task.rs  custom_rest_evt_cb.rs  mod.rs  msg_utils.rs  timer.rs
src/app_modules/app_common/: app.rs  mod.rs
src/app_modules/app_common/app/: advertise.rs  mod.rs
src/app_modules/app_custs/: custs1.rs  custs2.rs  mod.rs
src/app_modules/app_diss/: task.rs
src/ble_stack/: host.rs  mod.rs  profiles.rs  rwble_hl.rs
src/ble_stack/controller/: llm.rs
src/ble_stack/host/: att.rs  gap.rs  mod.rs
src/ble_stack/host/att/: attm.rs  mod.rs
src/ble_stack/host/gap/: gapc.rs  gapm.rs  mod.rs
src/ble_stack/profiles/: custom.rs  dis.rs  mod.rs  prf.rs
src/ble_stack/profiles/custom/: custs.rs
src/ble_stack/profiles/custom/custs/: custs1.rs  mod.rs
src/ble_stack/profiles/custom/custs/custs1/: mod.rs  task.rs
src/ble_stack/profiles/dis/: diss.rs
src/ble_stack/profiles/dis/diss/: task.rs
src/platform/: arch.rs  core_modules.rs  driver.rs  mod.rs  system_library.rs
src/platform/core_modules/: common.rs  crypto.rs  ke.rs  mod.rs  rf.rs  rwip.rs
src/platform/core_modules/ke/: mem.rs  msg.rs  task.rs  timer.rs
