[package]
categories = [
  "embedded",
  "hardware-support",
  "no-std",
]
description = "DA14531 SDK Rust bindings"
documentation = "https://docs.rs/da14531-sdk"
edition = "2021"
keywords = [
  "cortex-m",
  "embedded",
  "da14531",
  "no_std",
]
license = "MIT"
name = "da14531-sdk"
readme = "README.md"
repository = "https://github.com/rapitag/da14531-sdk"
rust-version = "1.60"
version = "0.2.0"

[dependencies]
cty = "0.2.2"
da14531-sdk-macros = "0.2.0"
paste = "1.0.7"
rtt-target = "0.3.1"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0"

[features]
default = [
  "custom_rest_evt_cb",
  "sleep_mode_off",
  "address_mode_static",
  "profile_dis_server",
  "profile_custom_server1",
]

# No main
no_main = []

# Expose unsafe bindings
expose_bindings = []

# Drivers
driver_spi = []
driver_spi_flash = []

# Custom REST event callback
custom_rest_evt_cb = []

# Sleep modes
sleep_mode_ext_on = []
sleep_mode_ext_otp_copy_on = []
sleep_mode_off = []

# BLE address modes
address_mode_public = []
address_mode_static = []

# BLE profiles
ble_client_profiles = ["ble_profiles"]
ble_profiles = []
ble_server_profiles = ["ble_profiles"]
profile_anc_client = ["ble_client_profiles"]
profile_batt_server = ["ble_server_profiles"]
profile_bcs_server = ["ble_server_profiles"]
profile_bms_server = ["ble_server_profiles"]
profile_cts_client = ["ble_client_profiles"]
profile_cts_server = ["ble_server_profiles"]
profile_custom_server = []
profile_custom_server1 = ["ble_server_profiles", "profile_custom_server"]
profile_custom_server2 = ["ble_server_profiles", "profile_custom_server"]
profile_dis_server = ["ble_server_profiles"]
profile_findme_locator = ["ble_client_profiles"]
profile_findme_target = ["ble_server_profiles"]
profile_gatt_client = ["ble_client_profiles"]
profile_prox_reporter = ["ble_server_profiles"]
profile_suota_receiver = ["ble_server_profiles"]
profile_uds_server = ["ble_server_profiles"]
profile_wss_server = ["ble_server_profiles"]

# Other features
exclude_dlg_timer = []
